"README file changes and removed .idea folder from repo"