@@ -24,14 +24,8 @@
         <kotlinx.serialization.version>1.8.0</kotlinx.serialization.version>
 
         <kotest.version>5.9.1</kotest.version>
+        <junit.version>5.9.3</junit.version>
     </properties>
-
-    <!--    <repositories>-->
-    <!--        <repository>-->
-    <!--            <id>mavenCentral</id>-->
-    <!--            <url>https://repo1.maven.org/maven2/</url>-->
-    <!--        </repository>-->
-    <!--    </repositories>-->
 
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
@@ -84,19 +78,12 @@
                     <includes>
                         <include>**/*Test.kt</include>
                     </includes>
-                    <argLine>
-                        --add-opens java.base/java.nio=ALL-UNNAMED
-                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-                        -Dio.netty.tryReflectionSetAccessible=true
-                    </argLine>
-                    <statelessTestsetReporter>
-                        <disable>true</disable>
-                    </statelessTestsetReporter>
-                    <disableXmlReport>true</disableXmlReport>
-                    <systemPropertyVariables>
-                        <!-- where to put kotest test reports  -->
-                        <gradle.build.dir>${project.build.directory}</gradle.build.dir>
-                    </systemPropertyVariables>
+                    <properties>
+                        <property>
+                            <name>junit.jupiter.extensions.autodetection.enabled</name>
+                            <value>true</value>
+                        </property>
+                    </properties>
                 </configuration>
             </plugin>
             <plugin>
@@ -145,11 +132,6 @@
     </build>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.jetbrains.kotlin</groupId>-->
-<!--            <artifactId>kotlin-stdlib-jdk8</artifactId>-->
-<!--            <version>${kotlin.version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-server-core-jvm</artifactId>
@@ -255,18 +237,18 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.jetbrains.kotlin</groupId>-->
-        <!--            <artifactId>kotlin-test-junit5</artifactId>-->
-        <!--            <version>2.1.0</version>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.junit.jupiter</groupId>-->
-        <!--            <artifactId>junit-jupiter</artifactId>-->
-        <!--            <version>5.10.0</version>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
